# RetailLabelSystem

./: .gitignore  CMakeLists.txt  README.md  README.txt
docs/: Redesign-Strategy-2026.md
forms/: MainWindow.ui
include/: AppUpdater.h  ConfigEditorDialog.h  DatabaseSettingsDialog.h  MainWindow.h  Menu.h  PrintDialog.h  ProductDelegate.h  VisualSettingsDialog.h  labelSystem.h  product.h  shop.h
resources/: Config.txt  Database.csv  DeletionLog.txt  style.qss  style_dark.qss  style_high_contrast.qss  style_light.qss
src/: AppUpdater.cpp  ConfigEditorDialog.cpp  DatabaseSettingsDialog.cpp  MainWindow.cpp  Menu.cpp  PrintDialog.cpp  ProductDelegate.cpp  VisualSettingsDialog.cpp  labelSystem.cpp  product.cpp  run.cpp  shop.cpp
tests/: test_common.h  test_labelSystem.cpp  test_labelSystem_files.cpp  test_labelSystem_files_main.cpp  test_labelSystem_queue.cpp  test_labelSystem_queue_main.cpp  test_mainwindow_gui_actions.cpp  test_mainwindow_gui_filters.cpp  test_mainwindow_gui_shortcuts.cpp  test_mainwindow_gui_utils.h  test_product.cpp  test_product_main.cpp  test_shop.cpp  test_shop_main.cpp
